to fix scrolling issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+html, body {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 @font-face {
   font-family: 'Boston-Regular';
   font-style: normal;
